[package]
name = "fivim-rs-utils"
description = "Rust utils for fivim."
version = "1.0.1"
authors = ["newproplus <https://github.com/newproplus>"]
homepage = "https://github.com/fivim/fivim-rs-utils"
repository = "https://github.com/fivim/fivim-rs-utils"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
anyhow = "^1.0"
base64 = "^0.21"
chrono = { version = "^0.4", features = ["unstable-locales"] }
crc32fast = "^1.3"
fs_extra = "^1.3"
lazy_static = "^1.4"
log = { version = "^0.4", features = ["std"] }
md5 = "^0.7"
reqwest = { version = "^0.11", features = ["json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sha2 = "^0.10"
sys-info = "^0.9"
simplelog = "^0.12"
time = "^0.3"
tokio = { version = "1", features = ["full"] }
zip = "^0.6"
walkdir = "^2.4"
filetime = "^0.2"
regex = "1.10"
toml = "0.8"
openssl = { version = "^0.10", features = [
    "vendored",
] } # https://stackoverflow.com/questions/68871193/pkg-config-error-during-rust-cross-compilation
